# simple-voice-chat-discord-bridge

./: .gitignore  Cargo.toml  README.md  audio.py  bot.py  client.py  discord_bot.py  main.py  mc_bot.py  pyproject.toml  requirements.txt  voice_client.py
audio/: opus.py  process.py
bridge/: __main__.py  mc_bot.py  util.py  voice_client.py
bridge/audio/: __init__.py  process.py
bridge/auth/: __init__.py  minecraft.py
bridge/minecraft/: auth.py  client.py
bridge/minecraft/packets/: __init__.py  minecraft.py  packet.py  voicechat.py
bridge/packets/: __init__.py  encodable.py
bridge/packets/minecraft/: minecraft.py  packet.py  voicechat.py
bridge/packets/voice/: __init__.py  message.py  packet.py  voice_packets.py
bridge/tools/: proxy.py
bridge/tools/login/: __main__.py
bridge/tools/proxy/: __main__.py
bridge/voice/: __init__.py  client.py  encoding.py
bridge/voice/packets/: __init__.py  packet.py  voice_packets.py
packets/: encodable.py
packets/minecraft/: minecraft.py  packet.py  voicechat.py
packets/voice/: message.py  packet.py  voice_packets.py
src/: main.rs  plugin_channels.rs  plugin_message.rs  resource_location.rs  respawn.rs  secret.rs  shutdown.rs
src/bridge/: __init__.py  __main__.py  discord_bot.py  mix_test.py
src/bridge/audio/: opus.py  process.py
src/bridge/minecraft/: auth.py  client.py
src/bridge/minecraft/packets/: __init__.py  minecraft.py  packet.py  voicechat.py
src/bridge/tools/login/: __main__.py
src/bridge/tools/proxy/: __main__.py
src/bridge/util/: encodable.py
src/bridge/voice/: __init__.py  client.py  encoding.py
src/bridge/voice/packets/: __init__.py  packet.py  voice_packets.py
src/voice/: connection.rs
tools/: proxy.py
