[package]
name = "bridge"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = { version = "0.8.2" }
anyhow = "1.0.68"
async-trait = "0.1.61"
cbc = { version = "0.1.2", features = ["std"] }
rand = { version = "0.8.5" }
const_format = "0.2.30"
env_logger = "0.10.0"
log = "0.4.17"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["signal"] }
uuid = "1.2.2"

[dependencies.azalea]
git = "https://github.com/mat-1/azalea"
branch = "1.19.2"

[dependencies.azalea-ecs]
git = "https://github.com/mat-1/azalea"
branch = "1.19.2"

[dependencies.azalea-client]
git = "https://github.com/mat-1/azalea"
branch = "1.19.2"

[dependencies.azalea-protocol]
git = "https://github.com/mat-1/azalea"
branch = "1.19.2"

[dependencies.azalea-core]
git = "https://github.com/mat-1/azalea"
branch = "1.19.2"

[dependencies.azalea-buf]
git = "https://github.com/mat-1/azalea"
branch = "1.19.2"
