[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "simple-voice-chat-discord-bridge"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = []
authors = [
    { name = "Raqbit", email = "raqbit@outlook.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "quarry~=1.9.4",
    "Twisted~=22.10.0",
    "transmitm~=0.1.0",
    "cryptography~=42.0.7",
    "opuslib~=3.0.1",
    "py-cord~=2.5.0",
    "PyNaCl~=1.5.0",
    "minecraft_launcher_lib~=5.2.0",
]

[project.urls]
Documentation = "https://github.com/raqbit/simple-voice-chat-discord-bridge#readme"
Issues = "https://github.com/raqbit/simple-voice-chat-discord-bridge/issues"
Source = "https://github.com/raqbit/simple-voice-chat-discord-bridge"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/bridge"]

[tool.hatch.envs.types]
extra-dependencies = [
    "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/bridge tests}"

[tool.coverage.run]
source_pkgs = ["bridge", "tests"]
branch = true
parallel = true

[tool.coverage.paths]
_ = ["src/bridge",]
tests = ["tests/bridge"]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
